--- a/a_propos.html
+++ b/a_propos.html
@@ -63,17 +63,17 @@
         <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
         <div class="container profile-page">
             <div class="row">
-                <div class="col-xl-6 col-lg-7 col-md-12">
+                <div>
                     <div class="card profile-header">
                         <div class="body">
                             <div class="row">
-                                <div class="col-lg-4 col-md-4 col-12">
+                                <div>
                                     <div class="profile-image float-md-right"> <img
                                             src="https://bootdey.com/img/Content/avatar/avatar7.png" alt=""> </div>
                                 </div>
-                                <div class="col-lg-8 col-md-8 col-12">
-                                    <h4 class="m-t-0 m-b-0"><strong>Michael</strong> Deo </h4>
-                                    <span class="job_post">Ui UX Designer</span>
+                                <div>
+                                    <h4 class="m-t-0 m-b-0"><strong>Jean-Jacques Beaudelaire</strong> KOUADIO </h4>
+                                    <span class="job_post">Conseiller juridique</span>
                                     <p>795 Folsom Ave, Suite 600 San Francisco, CADGE 94107</p>
 
                                     <p class="social-icon m-t-5 m-b-0">
@@ -87,17 +87,17 @@
                 </div>
 
 
-                <div class="col-xl-6 col-lg-7 col-md-12">
+                <div>
                     <div class="card profile-header">
                         <div class="body">
                             <div class="row">
-                                <div class="col-lg-4 col-md-4 col-12">
+                                <div>
                                     <div class="profile-image float-md-right"> <img
                                             src="https://bootdey.com/img/Content/avatar/avatar2.png" alt=""> </div>
                                 </div>
-                                <div class="col-lg-8 col-md-8 col-12">
-                                    <h4 class="m-t-0 m-b-0"><strong>Michael</strong> Deo</h4>
-                                    <span class="job_post">Ui UX Designer</span>
+                                <div>
+                                    <h4 class="m-t-0 m-b-0"><strong>Didier</strong> GOURENE</h4>
+                                    <span class="job_post">Conseiller juridique associé</span>
                                     <p>795 Folsom Ave, Suite 600 San Francisco, CADGE 94107</p>
 
                                     <p class="social-icon m-t-5 m-b-0">
@@ -112,17 +112,17 @@
             </div>
 
             <div class="row">
-                <div class="col-xl-6 col-lg-7 col-md-12">
+                <div>
                     <div class="card profile-header">
                         <div class="body">
                             <div class="row">
-                                <div class="col-lg-4 col-md-4 col-12">
+                                <div>
                                     <div class="profile-image float-md-right"> <img
                                             src="https://bootdey.com/img/Content/avatar/avatar3.png" alt=""> </div>
                                 </div>
-                                <div class="col-lg-8 col-md-8 col-12">
-                                    <h4 class="m-t-0 m-b-0"><strong>Michael</strong> Deo</h4>
-                                    <span class="job_post">Ui UX Designer</span>
+                                <div>
+                                    <h4 class="m-t-0 m-b-0"><strong>Souleymana</strong> KARAMOKO</h4>
+                                    <span class="job_post">Analyste en recherche juridique </span>
                                     <p>795 Folsom Ave, Suite 600 San Francisco, CADGE 94107</p>
 
                                     <p class="social-icon m-t-5 m-b-0">
@@ -136,17 +136,17 @@
                 </div>
 
 
-                <div class="col-xl-6 col-lg-7 col-md-12">
+                <div>
                     <div class="card profile-header">
                         <div class="body">
                             <div class="row">
-                                <div class="col-lg-4 col-md-4 col-12">
+                                <div>
                                     <div class="profile-image float-md-right"> <img
                                             src="https://bootdey.com/img/Content/avatar/avatar6.png" alt=""> </div>
                                 </div>
-                                <div class="col-lg-8 col-md-8 col-12">
-                                    <h4 class="m-t-0 m-b-0"><strong>Michael</strong> Deo</h4>
-                                    <span class="job_post">Ui UX Designer</span>
+                                <div>
+                                    <h4 class="m-t-0 m-b-0"><strong>Stephanie</strong> OCHO</h4>
+                                    <span class="job_post">Gestionnaire de dossiers </span>
                                     <p>795 Folsom Ave, Suite 600 San Francisco, CADGE 94107</p>
 
                                     <p class="social-icon m-t-5 m-b-0">
