Create responsive toggle menu

--- a/index.html
+++ b/index.html
@@ -16,7 +16,56 @@
         <div> <a href="a_propos.html">A propos de CBC </a></div>
         <div class="nav_items">
             <div><a href="tel:+2252721520799"><i class="fa-solid fa-phone" style="color: #ffffff;"></i></a></div>
-            <div><i class="fa-regular fa-calendar-check" style="color: #ffffff;"></i></div>
+            <div onclick="openForm()"><i class="fa-regular fa-calendar-check" style="color: #ffffff;"></i></div>
+
+            <div class="form-popup" id="myForm">
+                <p id="description">Remplissez ce formulaire pour une demande de rendez-vous.</p>
+                <form id="survey-form" action="envoi.php" method="post">
+
+                    Nom :
+                    <input type="text" id="name-label" name="nom" placeholder="John Smith" autocomplete="given-name"
+                        required><br>
+                    Email :
+                    <input type="email" id="email-label" name="email" placeholder="JohnSmith@gmail.com"
+                        autocomplete="given-name" required>
+                    <br>
+                    Service demandé
+                    <select name="service">
+                        <option value="mediation">Médiation</option>
+                        <option value="arbitrage">Arbitrage</option>
+                        <option value="constitution_dentreprise">Constituion d'entreprise</option>
+                        <option value="redaction_contrats">Redaction de contrats</option>
+                        <option value="conseil_immobilier">Conseil immobilier</option>
+                        <option value="fiscalite">Fiscalité</option>
+                        <option value="recherche_financement">Recherche de financement</option>
+                        <option value="gestion_rh">Gestion de rh</option>
+                        <option value="autre">Autre</option>
+                    </select>
+                    <br>
+                    Date de rendez-vous souhaitée:
+                    <input type="date" id="date" name="date" defaultvalue="20/02/2023" required>
+                    <br>
+                    Période de la journée souhaitée:
+                    <input type="radio" id="morning" name="periode" value="matin" checked>Matin
+                    <input type="radio" id="afternoon" name="periode" value="apres-midi">Après-midi
+                    <br>
+                    <u>Un message à nous passer ?</u><br>
+                    <textarea id="comment" placeholder="Entrez votre commentaire ici."> </textarea><br>
+                    <button type="submit" name="envoyer">Envoyer</button>
+                    <button type="button" onclick="closeForm()">Fermer</button>
+                </form>
+            </div>
+
+            <script>
+                function openForm() {
+                    document.getElementById("myForm").style.display = "block";
+                }
+
+                function closeForm() {
+                    document.getElementById("myForm").style.display = "none";
+                }
+            </script>
+
             <div><a href="mailto: cabinet.beaudelaire.conseil@gmail.com">
                     <i class="fa-sharp fa-regular fa-envelope" style="color: #ffffff;"></i></a>
             </div>
@@ -62,8 +111,7 @@
                         d'une table de discussion
                         guidée par un de nos médiateurs neutres.</p>
                     <a href="#" class="card-hover__link">
-                        <span>Prendre rendez vous</span>
-                        <i class="fa-regular fa-calendar-check"></i>
+                        <span>En savoir plus</span>
                     </a>
                 </div>
 
@@ -78,8 +126,7 @@
                         vous permet de résoudre rapidement vos litiges avec l'aide d'un tiers impartial expérimenté,
                         offrant ainsi une voie alternative équitable à la procédure judiciaire traditionnelle. </p>
                     <a href="#" class="card-hover__link">
-                        <span>Prendre rendez vous</span>
-                        <i class="fa-regular fa-calendar-check"></i>
+                        <span>En savoir plus</span>
                     </a>
                 </div>
 
@@ -95,8 +142,7 @@
                         fluide et conforme aux réglementations, vous permettant ainsi de donner vie à votre vision
                         entrepreneuriale en toute confiance.</p>
                     <a href="#" class="card-hover__link">
-                        <span>Prendre rendez vous</span>
-                        <i class="fa-regular fa-calendar-check"></i>
+                        <span>En savoir plus</span>
                     </a>
                 </div>
 
@@ -114,8 +160,8 @@
                         qui reflètent vos besoins et préoccupations spécifiques, vous offrant ainsi une tranquillité
                         d'esprit en affaires.</p>
                     <a href="#" class="card-hover__link">
-                        <span>Prendre rendez vous</span>
-                        <i class="fa-regular fa-calendar-check"></i>
+                        <span>En savoir plus</span>
+
                     </a>
                 </div>
 
@@ -131,8 +177,8 @@
                         veillant à ce que vos investissements immobiliers soient réalisés en toute sécurité et
                         conformément aux réglementations en vigueur.</p>
                     <a href="#" class="card-hover__link">
-                        <span>Prendre rendez vous</span>
-                        <i class="fa-regular fa-calendar-check"></i>
+                        <span>En savoir plus</span>
+
                     </a>
                 </div>
 
@@ -148,8 +194,8 @@
                         avec précision, vous permettant ainsi de gérer vos affaires financières en toute conformité et
                         d'optimiser vos stratégies fiscales.</p>
                     <a href="#" class="card-hover__link">
-                        <span>Prendre rendez vous</span>
-                        <i class="fa-regular fa-calendar-check"></i>
+                        <span>En savoir plus</span>
+
                     </a>
                 </div>
 
@@ -222,7 +268,7 @@
                         <br>
                         <u>Un message à nous passer ?</u><br>
                         <textarea id="comment" placeholder="Entrez votre commentaire ici."> </textarea><br>
-                        <button type="submit" name="envoyer">Envoyez</button>
+                        <button type="submit" name="envoyer">Envoyer</button>
                     </form>
                 </main>
             </div>
@@ -238,10 +284,10 @@
                 <p><a href="mailto: cabinet.beaudelaire.conseil@gmail.com"><i
                             class="fa-sharp fa-regular fa-envelope"></i></a>
                 </p>
-                <p>Notre localisation</p>
-                <p>Prendre rendez-vous</p>
+                <p>Nous retrouver</p>
             </div>
-            <p>Nous sommes ouvert du lundi au vendredi de 7h30 à 18h30.</p>
+            <p>Situé à Treichville centre, en face de la FDFP,
+                nous sommes ouvert du lundi au vendredi de 7h30 à 18h30.</p>
             <p>Mail: cabinet.beaudelaire.conseil@gmail.com</p>
             <p>Tel: +2252721520799</p>
         </div>
